--- a/launchpad-starter-next-app/package.json
+++ b/launchpad-starter-next-app/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@biomejs/biome": "^1.9.4",
         "@crossmint/client-sdk-react-ui": "1.13.1",
+        "@phala/dstack-sdk": "^0.1.7",
         "@radix-ui/react-avatar": "1.1.0",
         "@radix-ui/react-dropdown-menu": "2.1.1",
         "@radix-ui/react-slot": "1.1.0",
@@ -20,6 +21,7 @@
         "@tanstack/react-query": "5.51.18",
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.1",
+        "dotenv": "^16.4.7",
         "lucide-react": "0.473.0",
         "next": "15.1.6",
         "react": "^19",
