replaced react-ui sdk with passkey wallet alternative

--- a/launchpad-starter-next-app/.env.example
+++ b/launchpad-starter-next-app/.env.example
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_CROSSMINT_AUTH_SMART_WALLET_API_KEY=
 NEXT_PUBLIC_TEE_SERVER_URL=http://localhost:4000
+NEXT_PUBLIC_CROSSMINT_SERVER_APIK_KEY=
