--- a/launchpad-starter-next-app/package.json
+++ b/launchpad-starter-next-app/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "build": "next build",
-        "dev": "next dev",
+        "dev": "next dev -p 3001",
         "lint": "next lint",
         "lint:fix": "biome check --write",
         "start": "next start"
@@ -24,6 +24,7 @@
         "dotenv": "^16.4.7",
         "lucide-react": "0.473.0",
         "next": "15.1.6",
+        "ox": "^0.6.7",
         "react": "^19",
         "react-dom": "^19",
         "tailwind-merge": "2.6.0",
