added crossmint auth sdk and fixed signer flow

--- a/launchpad-starter-next-app/.env.example
+++ b/launchpad-starter-next-app/.env.example
@@ -1,3 +1,4 @@
-NEXT_PUBLIC_CROSSMINT_AUTH_SMART_WALLET_API_KEY=
+NEXT_PUBLIC_CROSSMINT_API_KEY=
 NEXT_PUBLIC_TEE_SERVER_URL=http://localhost:4000
-NEXT_PUBLIC_CROSSMINT_SERVER_API_KEY=
+CROSSMINT_SERVER_API_KEY=
+USE_STAGING_DB=0
