--- a/launchpad-starter-next-app/package.json
+++ b/launchpad-starter-next-app/package.json
@@ -10,6 +10,7 @@
         "start": "next start"
     },
     "dependencies": {
+        "@crossmint/client-sdk-react-ui": "^1.13.4",
         "@phala/dstack-sdk": "^0.1.7",
         "@radix-ui/react-avatar": "1.1.0",
         "@radix-ui/react-dropdown-menu": "2.1.1",
