--- a/agent-tee-phala/.tee-cloud/compose-files/tee-compose.yaml
+++ b/agent-tee-phala/.tee-cloud/compose-files/tee-compose.yaml
@@ -4,9 +4,10 @@ services:
     image: agent-tee-phala
     container_name: agent-tee-phala
     ports:
-      - "8090:8090"
+      - "8090:4000"
     environment:
       - NODE_ENV=development
+      - PORT=4000
     volumes:
       - /var/run/tappd.sock:/var/run/tappd.sock
     restart: always
