--- a/agent-tee-phala/image/package.json
+++ b/agent-tee-phala/image/package.json
@@ -8,7 +8,7 @@
     "build:docker": "tsc && docker build -t agent-tee-phala ."
   },
   "dependencies": {
-    "@phala/dstack-sdk": "latest",
+    "@phala/dstack-sdk": "^0.1.7",
     "@types/express": "^5.0.0",
     "express": "^4.21.2",
     "viem": "2.22.11"
