--- a/launchpad-starter-next-app/package.json
+++ b/launchpad-starter-next-app/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "build": "next build",
-        "dev": "next dev -p 3001",
+        "dev": "docker pull phalanetwork/tappd-simulator:latest && next dev -p 3001",
         "lint": "next lint",
         "lint:fix": "biome check --write",
         "start": "next start"
