--- a/launchpad-starter-next-app/package.json
+++ b/launchpad-starter-next-app/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@crossmint/client-sdk-react-ui": "^1.13.4",
         "@crossmint/common-sdk-base": "^0.3.1",
+        "@noble/curves": "^1.8.1",
         "@phala/dstack-sdk": "^0.1.7",
         "@radix-ui/react-avatar": "1.1.0",
         "@radix-ui/react-dropdown-menu": "2.1.1",
