--- a/agent-tee-phala/.tee-cloud/compose-files/tee-compose.yaml
+++ b/agent-tee-phala/.tee-cloud/compose-files/tee-compose.yaml
@@ -6,6 +6,8 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=4000
+    ports:
+      - 4000:4000
     volumes:
       - /var/run/tappd.sock:/var/run/tappd.sock
     restart: always
