cleanup and improved key generation

--- a/launchpad-starter-next-app/.env.example
+++ b/launchpad-starter-next-app/.env.example
@@ -8,5 +8,5 @@ CROSSMINT_SERVER_API_KEY=
 # Phala Cloud API Key
 PHALA_CLOUD_API_KEY=
 
-# Docker Image URL
+# Docker Image URL (not implemented yet)
 DOCKER_IMAGE_URL=
