--- a/agent-tee-phala/image/.env.example
+++ b/agent-tee-phala/image/.env.example
@@ -1,2 +1,2 @@
-# Phala Cloud Simulator Endpoint
+# Phala Cloud Simulator Endpoint (only used in development)
 DSTACK_SIMULATOR_ENDPOINT=http://host.docker.internal:8090
