--- a/agent-tee-phala/.tee-cloud/compose-files/tee-compose.yaml
+++ b/agent-tee-phala/.tee-cloud/compose-files/tee-compose.yaml
@@ -1,6 +1,9 @@
 version: "3"
 services:
   app:
+    build:
+      context: "../../image"
+      dockerfile: Dockerfile
     image: jonathanpaella/agentlaunchpadstarterkit:latest
     container_name: agent-tee-phala
     environment:
