--- a/agent-tee-phala/image/package.json
+++ b/agent-tee-phala/image/package.json
@@ -13,7 +13,8 @@
     "@phala/dstack-sdk": "^0.1.7",
     "@types/express": "^5.0.0",
     "express": "^4.21.2",
-    "viem": "2.22.11"
+    "viem": "2.22.11",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
