added comment to .env.example

--- a/launchpad-starter-next-app/.env.example
+++ b/launchpad-starter-next-app/.env.example
@@ -5,7 +5,7 @@ NEXT_PUBLIC_CROSSMINT_CLIENT_API_KEY=
 # Crossmint Server API Key
 CROSSMINT_SERVER_API_KEY=
 
-# Phala Cloud API Key
+# Phala Cloud API Key (for production TEE deployments - not needed for simulator)
 PHALA_CLOUD_API_KEY=
 
 # Docker Image URL (not implemented yet)
