--- a/launchpad-starter-next-app/.env.example
+++ b/launchpad-starter-next-app/.env.example
@@ -5,6 +5,9 @@ NEXT_PUBLIC_CROSSMINT_CLIENT_API_KEY=
 # Crossmint Server API Key
 CROSSMINT_SERVER_API_KEY=
 
+# Alchemy API Key
+ALCHEMY_API_KEY=
+
 # Phala Cloud API Key (for production TEE deployments - not needed for simulator)
 PHALA_CLOUD_API_KEY=
 
