--- a/agent-tee-phala/image/package.json
+++ b/agent-tee-phala/image/package.json
@@ -8,11 +8,12 @@
     "build:docker": "tsc && docker build -t agent-tee-phala .",
     "pull:docker-tee-simulator": "docker pull phalanetwork/tappd-simulator:latest && docker run --rm -d -p 8090:8090 phalanetwork/tappd-simulator:latest",
     "start:docker": "pnpm pull:docker-tee-simulator && docker-compose -f ../.tee-cloud/compose-files/tee-compose.yaml up -d",
-    "start:agent": "npx ts-node dist/agent/index.js"
+    "start:agent": "node dist/agent/index.js"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.1.9",
-    "@elizaos/core": "^0.1.9",
+    "@elizaos/adapter-sqljs": "0.25.6-alpha.1",
+    "@elizaos/core": "0.25.6-alpha.1",
     "@goat-sdk/adapter-vercel-ai": "^0.2.8",
     "@goat-sdk/core": "0.4.6",
     "@goat-sdk/crossmint": "^0.3.16",
@@ -25,6 +26,8 @@
     "ai": "^4.1.24",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "sharp": "^0.33.5",
+    "sql.js": "^1.12.0",
     "viem": "2.22.11"
   },
   "devDependencies": {
@@ -32,5 +35,10 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@elizaos/core@0.25.6-alpha.1": "patches/@elizaos__core@0.25.6-alpha.1.patch"
+    }
   }
 }
