--- a/agent-tee-phala/image/package.json
+++ b/agent-tee-phala/image/package.json
@@ -17,6 +17,7 @@
     "@goat-sdk/adapter-vercel-ai": "^0.2.8",
     "@goat-sdk/core": "0.4.6",
     "@goat-sdk/crossmint": "^0.3.16",
+    "@goat-sdk/plugin-coingecko": "^0.2.8",
     "@goat-sdk/plugin-erc20": "^0.2.10",
     "@goat-sdk/plugin-kim": "^0.1.10",
     "@goat-sdk/wallet-evm": "^0.2.8",
