SSW: add support for Solana Smart Wallets

--- a/launchpad-starter-next-app/.env.example
+++ b/launchpad-starter-next-app/.env.example
@@ -1,4 +1,7 @@
 
+# Preferred Chain to use (default is EVM)
+NEXT_PUBLIC_PREFERRED_CHAIN=
+
 # Crossmint Client API Key
 NEXT_PUBLIC_CROSSMINT_CLIENT_API_KEY=
 
@@ -13,3 +16,6 @@ PHALA_CLOUD_API_KEY=
 
 # Docker Image URL (not implemented yet)
 DOCKER_IMAGE_URL=
+
+# Admin wallet signer address (for Solana Smart Wallets only)
+NEXT_PUBLIC_SOLANA_SIGNER_PUBLIC_KEY=
