added support for sol delegated signers

--- a/launchpad-starter-next-app/.env.example
+++ b/launchpad-starter-next-app/.env.example
@@ -17,5 +17,6 @@ PHALA_CLOUD_API_KEY=
 # Docker Image URL (not implemented yet)
 DOCKER_IMAGE_URL=
 
-# Admin wallet signer address (for Solana Smart Wallets only)
+# Admin wallet signer address (for Solana Smart Wallets only) SEE README.md for more info on how to set this up
 NEXT_PUBLIC_SOLANA_SIGNER_PUBLIC_KEY=
+SOLANA_SIGNER_PRIVATE_KEY=
