--- a/launchpad-starter-next-app/package.json
+++ b/launchpad-starter-next-app/package.json
@@ -13,13 +13,13 @@
         "@crossmint/client-sdk-react-ui": "^1.14.9",
         "@crossmint/common-sdk-base": "^0.3.1",
         "@noble/curves": "^1.8.1",
-        "@phala/dstack-sdk": "^0.1.7",
         "@radix-ui/react-avatar": "1.1.0",
         "@radix-ui/react-dropdown-menu": "2.1.1",
         "@radix-ui/react-slot": "1.1.0",
         "@radix-ui/react-tabs": "1.1.0",
         "@radix-ui/react-toast": "1.2.1",
         "@tanstack/react-query": "5.51.18",
+        "bs58": "^6.0.0",
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.1",
         "dotenv": "^16.4.7",
@@ -29,6 +29,7 @@
         "react": "^19",
         "react-dom": "^19",
         "tailwind-merge": "2.6.0",
+        "tweetnacl": "^1.0.3",
         "viem": "2.22.11"
     },
     "devDependencies": {
