SSW: Support Solana Smart Wallets (#20)
* SSW: add support for Solana Smart Wallets

* removed readme check emoji

* added support for sol delegated signers

* updated readme

* cleanup

* cleanup

* added chain env var to agents wallet

* feedback

* Update README.md

--- a/launchpad-starter-next-app/.env.example
+++ b/launchpad-starter-next-app/.env.example
@@ -1,4 +1,7 @@
 
+# Preferred Chain to use (default is EVM)
+NEXT_PUBLIC_PREFERRED_CHAIN=
+
 # Crossmint Client API Key
 NEXT_PUBLIC_CROSSMINT_CLIENT_API_KEY=
 
@@ -19,3 +22,7 @@ PHALA_CLOUD_API_KEY=
 
 # Docker Image URL (not implemented yet)
 DOCKER_IMAGE_URL=
+
+# Admin wallet signer address (for Solana Smart Wallets only) SEE README.md for more info on how to set this up
+NEXT_PUBLIC_SOLANA_SIGNER_PUBLIC_KEY=
+SOLANA_SIGNER_PRIVATE_KEY=
