--- a/agent-tee-phala/image/package.json
+++ b/agent-tee-phala/image/package.json
@@ -16,13 +16,14 @@
     "@elizaos/core": "0.25.6-alpha.1",
     "@goat-sdk/adapter-vercel-ai": "^0.2.8",
     "@goat-sdk/core": "0.4.6",
-    "@goat-sdk/crossmint": "^0.3.18",
+    "@goat-sdk/crossmint": "^0.4.1",
     "@goat-sdk/plugin-coingecko": "^0.2.8",
     "@goat-sdk/plugin-erc20": "^0.2.10",
     "@goat-sdk/plugin-kim": "^0.1.10",
     "@goat-sdk/wallet-evm": "^0.2.8",
     "@goat-sdk/wallet-viem": "0.2.0",
     "@phala/dstack-sdk": "^0.1.10",
+    "@solana/web3.js": "^1.98.0",
     "@types/express": "^5.0.0",
     "ai": "^4.1.24",
     "dotenv": "^16.4.5",
