updated .env error handling for optional vars

--- a/launchpad-starter-next-app/.env.example
+++ b/launchpad-starter-next-app/.env.example
@@ -1,13 +1,13 @@
 # Required API Keys
 NEXT_PUBLIC_CROSSMINT_CLIENT_API_KEY=
 CROSSMINT_SERVER_API_KEY=
-ALCHEMY_API_KEY=
 COINGECKO_API_KEY=
 OPENAI_API_KEY=
 
 # Optional Settings
 NEXT_PUBLIC_PREFERRED_CHAIN=         # Optional: Defaults to base-sepolia
 PHALA_CLOUD_API_KEY=                 # Optional: Only needed for production TEE deployments
+ALCHEMY_API_KEY=                     # Optional: Only needed for EVM Smart Wallets
 
 # Optional Solana Settings
 # Only required when using Solana Smart Wallets
