updated readme and .env.example file

--- a/launchpad-starter-next-app/.env.example
+++ b/launchpad-starter-next-app/.env.example
@@ -6,11 +6,14 @@ OPENAI_API_KEY=
 
 # Optional Settings
 NEXT_PUBLIC_PREFERRED_CHAIN=         # Optional: Defaults to base-sepolia
-PHALA_CLOUD_API_KEY=                 # Optional: Only needed for production TEE deployments
-ALCHEMY_API_KEY=                     # Optional: Only needed for EVM Smart Wallets
+PHALA_CLOUD_API_KEY=                 # Optional for local simulated deployments, required for production TEE deployments
 
-# Optional Solana Settings
-# Only required when using Solana Smart Wallets
+# EVM Smart Wallet Settings
+# These settings are only needed if you're using EVM Smart Wallets
+ALCHEMY_API_KEY=
+
+# Solana Smart Wallet Settings
+# These settings are only needed if you're using Solana Smart Wallets
 NEXT_PUBLIC_SOLANA_SIGNER_PUBLIC_KEY=
 SOLANA_SIGNER_PRIVATE_KEY=
 SOLANA_RPC_URL=
