Vercel Ai: Support Solana Smart Wallet via GOAT (#22)
* AI Agent: Add solana wallet type

* updated .env error handling for optional vars

* updated readme and .env.example file

* Update README.md

* Update README.md

--- a/launchpad-starter-next-app/.env.example
+++ b/launchpad-starter-next-app/.env.example
@@ -1,28 +1,19 @@
-
-# Preferred Chain to use (default is EVM)
-NEXT_PUBLIC_PREFERRED_CHAIN=
-
-# Crossmint Client API Key
+# Required API Keys
 NEXT_PUBLIC_CROSSMINT_CLIENT_API_KEY=
-
-# Crossmint Server API Key
 CROSSMINT_SERVER_API_KEY=
-
-# Alchemy API Key
-ALCHEMY_API_KEY=
-
-# Coingecko API Key
 COINGECKO_API_KEY=
-
-# OpenAI API Key
 OPENAI_API_KEY=
 
-# Phala Cloud API Key (for production TEE deployments - not needed for simulator)
-PHALA_CLOUD_API_KEY=
+# Optional Settings
+NEXT_PUBLIC_PREFERRED_CHAIN=         # Optional: Defaults to base-sepolia
+PHALA_CLOUD_API_KEY=                 # Optional for local simulated deployments, required for production TEE deployments
 
-# Docker Image URL (not implemented yet)
-DOCKER_IMAGE_URL=
+# EVM Smart Wallet Settings
+# These settings are only needed if you're using EVM Smart Wallets
+ALCHEMY_API_KEY=
 
-# Admin wallet signer address (for Solana Smart Wallets only) SEE README.md for more info on how to set this up
+# Solana Smart Wallet Settings
+# These settings are only needed if you're using Solana Smart Wallets
 NEXT_PUBLIC_SOLANA_SIGNER_PUBLIC_KEY=
 SOLANA_SIGNER_PRIVATE_KEY=
+SOLANA_RPC_URL=
