--- a/agent-tee-phala/image/.gitignore
+++ b/agent-tee-phala/image/.gitignore
@@ -28,3 +28,16 @@ yarn-error.log*
 # OS
 .DS_Store
 Thumbs.db 
+
+# Eliza Agent
+*.ts
+dist
+!index.ts
+!character.ts
+.env
+node_modules
+dist/
+
+db.sqlite
+.idea
+.tee-cloud
